--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,15 +27,14 @@ jobs:
     name: Deploy CloudFlare Worker
     uses: ./.github/workflows/deploy_worker.yml
     secrets: inherit
-    needs: [precheck, prepare_db, deploy_pages]
+    needs: [precheck, prepare_db]
     with:
       d1_database_id: ${{ needs.precheck.outputs.d1_database_id }}
       d1_apparent_database_id: ${{ needs.prepare_db.outputs.d1_apparent_database_id }}
-      pages_url: ${{ needs.deploy_pages.outputs.pages_url }}
       worker_url: ${{ needs.precheck.outputs.worker_url }}
   
   finalise:
     name: Final output
     uses: ./.github/workflows/finalise.yml
     secrets: inherit
-    needs: [deploy_worker, deploy_pages, prepare_db]
+    needs: [deploy_worker, prepare_db]
