--- a/.github/workflows/deploy_worker.yml
+++ b/.github/workflows/deploy_worker.yml
@@ -11,10 +11,6 @@ on:
         description: 'Database id to actually use'
         required: true
         type: string
-      pages_url:
-        description: 'URL of frontend deployment in pages for CORS'
-        required: true
-        type: string
       worker_url:
         description: 'URL of worker deployment'
         required: true
@@ -47,7 +43,7 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |         
-          wrangler deploy --var FRONTEND_URL:${{ inputs.pages_url }}
+          wrangler deploy --var
           echo "${{ secrets.TELEGRAM_BOT_TOKEN }}" | wrangler secret put TELEGRAM_BOT_TOKEN
           INIT_SECRET=$(openssl rand -hex 24)
           echo $INIT_SECRET | wrangler secret put INIT_SECRET
